--- a/Jerry_Prova_POO.ipynb
+++ b/Jerry_Prova_POO.ipynb
@@ -308,7 +308,11 @@
         "id": "rixlhwlr47Jf",
         "colab_type": "text"
       },
-   
+   "source": [
+        "#Obsevações \n",
+        "\n",
+        
+      ]
     }
   ]
 }
